--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #816005;
+  background-color: #fffadd;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -33,6 +33,7 @@
 .example2 {
   margin: 20px 20px 50px 50px;
 }
+
 
 @keyframes App-logo-spin {
   from {
