Added routing (auth, productspage, shop)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #fffadd;
+  background-color: #816005;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
