--- a/client/src/pages/PagesStyle.css
+++ b/client/src/pages/PagesStyle.css
@@ -22,3 +22,10 @@
 .spaceBetween {
     justify-content:space-between;
 }
+
+.adminGrid {
+  margin-top: 20px;
+  margin-bottom: 100px;
+  margin-left: 60vh;
+  width: 70vh;
+}
